Changed z-index to fix a styling bug in the list items

--- a/core/app/assets/stylesheets/facts/top_right_arrow.css.less
+++ b/core/app/assets/stylesheets/facts/top_right_arrow.css.less
@@ -38,7 +38,7 @@ div.top-right-arrow, div.evidence-popover-arrow, div.sub-comments-popover-arrow 
     }
 
     i {
-      z-index: 101;
+      z-index: 102;
       position: absolute;
       border-bottom: 1px solid #fff;
       .border-bottom-radius(0);
@@ -53,7 +53,7 @@ div.top-right-arrow, div.evidence-popover-arrow, div.sub-comments-popover-arrow 
     top: 100%;
     right: -1px;
     margin: 0;
-    z-index: 100;
+    z-index: 101;
     background: #fff;
     padding: 3px 0;
 
